--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "devicons-react": "^1.3.0",
+    "framer-motion": "^11.11.17",
     "iconoir-react": "^7.10.0",
+    "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
